--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="project-list">
       <p>Select a project:</p>
       <!-- List of dummy projects with radio buttons -->
-      <label class="project-item"><input type="radio" name="project" value="Project 1" required> Project 1</label>
-      <label class="project-item"><input type="radio" name="project" value="Project 2"> Project 2</label>
-      <label class="project-item"><input type="radio" name="project" value="Project 3"> Project 3</label>
-      <label class="project-item"><input type="radio" name="project" value="Project 4"> Project 4</label>
-      <label class="project-item"><input type="radio" name="project" value="Project 5"> Project 5</label>
+      <label class="project-item"><input type="radio" name="project" value="Project 1" required>Ma'am Lubna Project</label>
+      <label class="project-item"><input type="radio" name="project" value="Project 2">Sir Naeem Project</label>
+      <label class="project-item"><input type="radio" name="project" value="Project 3">Sir Yasir Project</label>
+      <label class="project-item"><input type="radio" name="project" value="Project 4">Sir Waseem Project</label>
+      <label class="project-item"><input type="radio" name="project" value="Project 5">Ma'am Seherish Project</label>
     </div>
 
     <button type="submit">Submit</button>
