Update and rename index.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -24,11 +24,11 @@
     <div class="project-list">
       <p>Select a project:</p>
       <!-- List of dummy projects with radio buttons -->
-      <label class="project-item"><input type="radio" name="project" value="Project 1" required>Ma'am Lubna Project</label>
-      <label class="project-item"><input type="radio" name="project" value="Project 2">Sir Naeem Project</label>
-      <label class="project-item"><input type="radio" name="project" value="Project 3">Sir Yasir Project</label>
-      <label class="project-item"><input type="radio" name="project" value="Project 4">Sir Waseem Project</label>
-      <label class="project-item"><input type="radio" name="project" value="Project 5">Ma'am Seherish Project</label>
+      <label class="project-item"><input type="radio" name="project" value="Ma'am Lubna Project" required>Ma'am Lubna Project</label>
+      <label class="project-item"><input type="radio" name="project" value="Sir Naeem Project">Sir Naeem Project</label>
+      <label class="project-item"><input type="radio" name="project" value="Sir Yasir Project">Sir Yasir Project</label>
+      <label class="project-item"><input type="radio" name="project" value="Sir Waseem Project">Sir Waseem Project</label>
+      <label class="project-item"><input type="radio" name="project" value="Ma'am Seherish Project">Ma'am Seherish Project</label>
     </div>
 
     <button type="submit">Submit</button>
